--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.0.12",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "~1.9.0",
+    "npm": "^5.8.0",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
