--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "main",
-  "version": "0.0.0",
+  "name": "sportekjobs",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "devstart": "nodemon ./bin/www",
@@ -9,19 +9,26 @@
     "start": "concurrently \"npm run watch\" --names \"💻,📦\" --prefix name"
   },
   "dependencies": {
-    "concurrently": "^3.5.1",
-    "cookie-parser": "~1.4.3",
+    "async": "^2.6.1",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "concurrently": "^3.6.1",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "moment": "^2.21.0",
-    "mongoose": "^5.0.12",
+    "express": "^4.16.4",
+    "express-sitemap": "^1.8.0",
+    "http-errors": "^1.7.1",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "mongodb": "^2.2.36",
+    "mongoose": "^5.3.15",
     "mongoose-slug-generator": "^1.0.4",
-    "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "morgan": "^1.9.1",
+    "osmosis": "^1.1.8",
+    "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.18.7"
   }
 }
