make it better4

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.9.1",
     "osmosis": "^1.1.10",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "nodemon": "1.18.10",
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
