--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "morgan": "^1.9.1",
     "osmosis": "^1.1.10",
     "pug": "^2.0.0-rc.4",
-    "nodemon": "1.18.10",
+    "nodemon": "1.18.10"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
