--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "start": "concurrently \"npm run watch\" --names \"💻,📦\" --prefix name"
   },
   "dependencies": {
-    "async": "^2.6.2",
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
+    "async": "^2.6.3",
+    "axios": "^0.18.1",
+    "body-parser": "^1.19.0",
     "concurrently": "^3.6.1",
     "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-sitemap": "^1.8.0",
-    "http-errors": "^1.7.2",
-    "lodash": "^4.17.11",
+    "http-errors": "^1.7.3",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongodb": "^2.2.36",
-    "mongoose": "^5.4.22",
+    "mongoose": "^5.6.7",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.9.1",
     "nodemon": "1.18.10",
     "osmosis": "^1.1.10",
-    "pug": "^2.0.0-rc.4",
-    "stripe": "^6.28.0"
+    "pug": "^2.0.4",
+    "stripe": "^6.36.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
